@@ -1,3 +1,6 @@
 #!/bin/sh --
 
-java -Djava.library.path=/usr/lib:/usr/lib/jni -cp /usr/share/java/dbus.jar:/usr/share/java/dbus-viewer.jar org.freedesktop.dbus.viewer.DBusViewer "$@"
+JARPATH=%JARPATH%
+LIBPATH=%LIBPATH%
+
+java -Djava.library.path=/usr/lib:$LIBPATH -cp $JARPATH/dbus.jar:$JARPATH/dbus-viewer.jar org.freedesktop.dbus.viewer.DBusViewer "$@"
